[project]
name = "dash-hummingbird-components"
version = "2024.2.0"
description = "A collection of dash components for DASH used in at Hummingbird"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["plotly", "dash", "frontend"]
authors = [{ name = "Maurice Frank", email = "mfrank@hb-dx.com" }]
maintainers = [{ name = "Maurice Frank", email = "mfrank@hb-dx.com" }]


dependencies = ["dash", "dash-daq", "colorlover", "paramiko", "natsort", "dash-mantine-components", "dash-iconify", "anndata-cache@git+https://github.com/gitHBDX/anndata-cache"]

[project.urls]
"Homepage" = "https://github.com/gitHBDX/dash-hummingbird-components"

# [project.scripts] # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
